--- a/app/contacto.html
+++ b/app/contacto.html
@@ -63,14 +63,12 @@
     <section class="horizon">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-xs-12">
-                    <h3 class="horizon__title">Hablemos</h3>
-                    <p class="horizon__content">
-                        Quizás soy un poco tímido, pero siempre estoy abierto a comentarios, consultas o saludos.
-                    </p>
-                    <p class="horizon__content">
-                        Ponte en contacto conmigo y trataré de comunicarme contigo lo más pronto posible.
-                    </p>
+                <div class="col-sm-6 col-xs-12 col__kicker--mobile">
+                    <h3 class="horizon__title "><span class="horizon__title--line">Hablemos</span></h3>
+                    <div class="horizon__content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat cum corporis adipisci culpa quibusdam dolores consectetur fugit aperiam ex nostrum modi voluptas eligendi quam quis facere aliquam, cumque voluptatem temporibus!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio repellat iure culpa cumque veniam laboriosam provident, adipisci perspiciatis dolor temporibus, repellendus natus saepe velit voluptate expedita? Officia dolorum nam obcaecati?</p>
+                    </div>
                     <ul class="icons-box__list icons-box__list--black font-centered">
                         <li class="icons-box__item icons-box__item--circled">
                             <a href="#" class="icons-box__link fa fa-github"></a>
@@ -83,7 +81,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12 no-padding--mobile">
                     <form action="" class="form">
                         <div class="form__group">
                             <input type="text" class="form-control form__control" name="name" id="name" placeholder="Nombre" required>
@@ -102,39 +100,11 @@
             </div>
         </div>
     </section>
-
-    <footer class="footer-bar">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 no-padding--right">
-                    <p class="footer-bar__copyright">
-                        &copy;Copyright <a href="#" class="common__link">NAG</a> 2017
-                    </p>
-                </div>
-                <div class="col-lg-6 font-centered">
-                    <ul class="icons-box__list">
-                        <li class="icons-box__item icons-box__item--circled">
-                            <a href="#" class="icons-box__link fa fa-github"></a>
-                        </li>
-                        <li class="icons-box__item icons-box__item--circled">
-                            <a href="#" class="icons-box__link fa fa-behance"></a>
-                        </li>
-                        <li class="icons-box__item icons-box__item--circled">
-                            <a href="#" class="icons-box__link fa fa-linkedin"></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 font-righted">
-                    <ul class="icons-box__list icons-box__list--right">
-                        <li class="icons-box__item icons-box__item--circled">
-                            <a href="#" class="icons-box__link fa fa-angle-up"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <footer hidden="hidden">
+        <p>&copy;Copyright <a href="http://nicolas.ayancan.laboratoriodiseno.cl" title="NAG">NAG</a> 2017</p>
     </footer>
     <script src="scripts/libs/jquery-1.11.3.js"></script>
     <script src="scripts/libs/bootstrap.min.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
