--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="portfolio, diseño, desarrollo, web, proyectos, portafolio, projects, diseño web, desarrollo web">
     <meta name="robots" content="all">
     <!--favicon-->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon--min.png">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,700" rel="stylesheet">
@@ -31,7 +31,7 @@
                     </button>
                     <figure class="navbar-brand navbar-brand__figure">
                         <a href="index.html">
-                            <img src="images/logo-white.png" alt="Logo NAG" class="navbar-brand__logo">
+                            <img src="images/logo--white.svg" alt="Logo NAG" class="navbar-brand__logo">
                         </a>
                     </figure>
                 </div>
@@ -64,7 +64,7 @@
         </figure>
         <div class="main-home__body overlay__body overlay-home__body font-centered">
             <figure class="main-home__logo">
-                <img src="images/logo-white.png" alt="title" class="elastic-img">
+                <img src="images/logo--white.svg" alt="title" class="elastic-img">
             </figure>
             <div class="main-home__overlay">
                 <h1 class="main-home__title upper">Nicolas Ayancan Guerrero</h1>
@@ -83,9 +83,12 @@
             </div>
         </div>
     </main>
-
+    <footer hidden="hidden">
+        <p>&copy;Copyright <a href="http://nicolas.ayancan.laboratoriodiseno.cl" title="NAG">NAG</a> 2017</p>
+    </footer>
     <script src="scripts/libs/jquery-1.11.3.js"></script>
     <script src="scripts/libs/bootstrap.min.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
