--- a/app/services.html
+++ b/app/services.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
 
-    <main class="main">
+    <main id="main" class="main">
         <div class="container">
             <h1 class="main__title font-centered"><span class="main__title--line">Services</span></h1>
         </div>
@@ -74,14 +74,14 @@
                     <div class="horizon__content">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nesciunt dolore quaerat sint maiores itaque labore recusandae quod minima aliquam, reiciendis! Id, numquam architecto expedita eaque tempore voluptatibus, consequuntur a.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda blanditiis cumque eius provident nesciunt ipsam fugiat eveniet odio recusandae doloribus vel cum perspiciatis nulla, hic aliquam magnam, laborum quae repellendus?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolor reprehenderit ratione tempora, aliquid harum deleniti similique. Inventore voluptatibus rem accusantium totam ratione, pariatur laudantium reprehenderit, dicta vitae distinctio magnam.</p>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="horizon no-padding--vertical">
+    <section class="horizon no-padding--vertical col__kicker_half--mobile">
         <div class="row">
             <div class="col-lg-6 col-xs-12">
                 <div class="horizon__body">
@@ -89,7 +89,6 @@
                     <div class="horizon__content">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo nesciunt dolore quaerat sint maiores itaque labore recusandae quod minima aliquam, reiciendis! Id, numquam architecto expedita eaque tempore voluptatibus, consequuntur a.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda blanditiis cumque eius provident nesciunt ipsam fugiat eveniet odio recusandae doloribus vel cum perspiciatis nulla, hic aliquam magnam, laborum quae repellendus?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolor reprehenderit ratione tempora, aliquid harum deleniti similique. Inventore voluptatibus rem accusantium totam ratione, pariatur laudantium reprehenderit, dicta vitae distinctio magnam.</p>
                     </div>
                 </div>
             </div>
@@ -104,12 +103,12 @@
     <footer class="footer-bar">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 no-padding--right">
+                <div class="col-lg-3 hidden-sm hidden-xs no-padding--right">
                     <p class="footer-bar__copyright">
                         &copy;Copyright <a href="#" class="common__link">NAG</a> 2017
                     </p>
                 </div>
-                <div class="col-lg-6 font-centered">
+                <div class="col-lg-6 col-sm-9 col-xs-10 font-centered lefted--tablet">
                     <ul class="icons-box__list">
                         <li class="icons-box__item icons-box__item--circled">
                             <a href="#" class="icons-box__link fa fa-github"></a>
@@ -122,10 +121,10 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-lg-3 font-righted">
+                <div class="col-lg-3 col-sm-3 col-xs-2 font-righted">
                     <ul class="icons-box__list icons-box__list--right">
                         <li class="icons-box__item icons-box__item--circled">
-                            <a href="#" class="icons-box__link fa fa-angle-up"></a>
+                            <a href="#main" class="icons-box__link fa fa-angle-up"></a>
                         </li>
                     </ul>
                 </div>
@@ -134,5 +133,6 @@
     </footer>
     <script src="scripts/libs/jquery-1.11.3.js"></script>
     <script src="scripts/libs/bootstrap.min.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
